--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.0",
     "bluebird": "^3.5.2",
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
     "monaco-editor": "^0.15.6",
     "requirejs": "^2.3.6",
     "text": "github:requirejs/text#latest"
