--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "dist"
   ],
   "license": "MIT",
-  "dependencies": {
-    "event-stream": "^4.0.1"
-  },
   "peerDependencies": {},
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
@@ -27,7 +24,7 @@
     "open-iconic": "^1.1.1",
     "requirejs": "^2.3.6",
     "text": "github:requirejs/text#latest",
-    "event-stream": "^4.0.1",
+    "event-stream": "3.3.4",
     "aurelia-cli": "^1.0.0-beta.8",
     "aurelia-testing": "^1.0.0",
     "aurelia-tools": "^2.0.0",
